--- a/index.html
+++ b/index.html
@@ -36,6 +36,14 @@
             </div>
         </div>
     </div>
-    <div class="sidebar"></div>
+    <div class="sidebar">
+        <i class="sidebar-icon fa-solid fa-magnifying-glass"></i>
+        <i class="sidebar-icon fa-solid fa-house-chimney"></i>
+        <i class="sidebar-icon fa-solid fa-users"></i>
+        <i class="sidebar-icon fa-solid fa-bookmark"></i>
+        <i class="sidebar-icon fa-solid fa-tv"></i>
+        <i class="sidebar-icon fa-solid fa-hourglass"></i>
+        <i class="sidebar-icon fa-solid fa-cart-shopping"></i>
+    </div>
 </body>
 </html>
