Complete Movie Website

--- a/index.html
+++ b/index.html
@@ -48,8 +48,8 @@
     <div class="container">
         <div class="content-container">
             <div class="featured-content"
-            style="background: linear-gradient(to bottom, rgba(185, 36, 36, 0), #151515), url('img/django1.jpeg');">
-            <img class="featured-title" src="img/django2.png" alt="">
+            style="background: linear-gradient(to bottom, rgba(185, 36, 36, 0), #151515), url('img/iceage.png');">
+            <img class="featured-title" src="img/iceage-logo.png" alt="iceage logo">
                 <p class="featured-desc">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cupiditate aliquam eos laboriosam quos quam rerum tempore excepturi hic at exercitationem. Harum, consequatur? Facere error sed cum recusandae voluptate dolore ab.</p>
                 <button class="featured-button">WATCH</button>
             </div>
